@@ -405,3 +405,4 @@ L["Quick Join Messages"] = "Schnellbeitritt Nachricht"
 L["Show clickable Quick Join messages inside of the chat."] = "Zeige eine klickbare Schnellbeitritts Nachricht im Chat."
 L["is looking for members"] = "sucht nach Mitgliedern"
 L["joined a group"] = "ist einer Gruppe beigetreten"
+L["Add timestamp to all messages"] = "Zeitstempel bei allen Nachricht anzeigen"
