@@ -405,3 +405,4 @@ L["Quick Join Messages"] = "Mensajes de Unión Rápida"
 L["Show clickable Quick Join messages inside of the chat."] = "Muestra mensajes clicables de Unión Rápida dentro del chat."
 L["is looking for members"] = "está buscando miembros para el grupo"
 L["joined a group"] = "se unió a un grupo"
+L["Add timestamp to all messages"] = "Añade marca de tiempo a todos los mensajes."
