@@ -408,6 +408,7 @@ GW_DEFAULT["CHAT_KEYWORDS_ALERT"] = true
 GW_DEFAULT["CHAT_KEYWORDS_ALERT_COLOR"] = {r = .5, g = .5, b = .5}
 GW_DEFAULT["CHAT_KEYWORDS_EMOJI"] = true
 GW_DEFAULT["CHAT_SOCIAL_LINK"] = true
+GW_DEFAULT["CHAT_ADD_TIMESTAMP_TO_ALL"] = true
 
 GW_DEFAULT["ClasspowerBar_pos"] = {}
 GW_DEFAULT["ClasspowerBar_pos"]["point"] = "BOTTOMLEFT"
