@@ -3,6 +3,9 @@ FIXES
     - Tweak raid/party profiles and fix some bugs
     - You can now change raid/party profile settings while in a party/raid
 
+MISC
+    - Added option to show chat timestamps for all messages
+
 5.17.0
 NEW
     - CHAT:
